--- a/sklearn_usedcarexample.ipynb
+++ b/sklearn_usedcarexample.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importing the relevant libraries"
+    "## Importing libraries"
    ]
   },
   {
